# Python-Payroll-Management-System

./: .gitignore  App.css  DummyData.py  Employee1.csv  Employee100.csv  Employee1000.csv  Employee10000.csv  Employee11.csv  Employee2.csv  Employee2000.csv  Employee222.csv  Employee5.csv  Oldcode.py  README.md  TUI.py  data_management.py  database.db  databasewait.db  datamanagement.py  dbtransit.py  index.html  main.py  newdatabase.db  pyproject.toml  structuredatabase.py  sturcturedatabase.py
databasetests/: bigdata.db-journal
