[project]
name = "Payroll-manager"
version = "0.1.0"
description = "This is supposed to a be my college project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "colorama>=0.4.6",
    "mysql-connector-python>=9.4.0",
    "pyfiglet>=1.0.4",
    "textual>=6.7.1",
    "textual-datepicker>=0.2.4",
    "textual-dev>=1.8.0",
]
